--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -13,13 +13,13 @@ msgstr ""
 "Language-Team: \n"
 "Plural-Forms: \n"
 
-#: src/pages/Home/index.tsx:45
-#~ msgid "<0>Memento Mori.</0>"
-#~ msgstr "<0>Memento Mori.</0>"
-
 #: src/pages/Home/index.tsx:58
 msgid "Do you close your eyes to what you’ve seen and go back to sleep? Or do you come with this psycho burnout and do the impossible against the unbelievable and keep the future at bay for another day?"
 msgstr "Do you close your eyes to what you’ve seen and go back to sleep? Or do you come with this psycho burnout and do the impossible against the unbelievable and keep the future at bay for another day?"
+
+#: src/components/Header/index.tsx:61
+msgid "First Night at the Opera?"
+msgstr "First Night at the Opera?"
 
 #: src/pages/Home/index.tsx:65
 msgid "Meet me at <0>The Crucible</0> and tell me a little bit about yourself, agent. What's your deal?"
