--- a/src/locales/fr/messages.po
+++ b/src/locales/fr/messages.po
@@ -13,17 +13,13 @@ msgstr ""
 "Language-Team: \n"
 "Plural-Forms: \n"
 
-#: src/pages/Home/index.tsx:45
-#~ msgid "<0>Memento Mori.</0>"
-#~ msgstr "<0>Memento Mori.</0>"
-
-#: src/pages/Home/index.tsx:60
-#~ msgid "Do you close your eyes to what you've seen and go back to sleep? Or do you come with this psycho burnout and do the impossible against the unbelievable and keep the future at bay for another day?"
-#~ msgstr "Fermez-vous les yeux sur ce que vous avez vu pour vous rendormir ? Ou accompagnez-vous ce psychopathe épuisé pour accomplir l'impossible face à l'incroyable et repousser l'avenir pour un jour de plus ?"
-
 #: src/pages/Home/index.tsx:58
 msgid "Do you close your eyes to what you’ve seen and go back to sleep? Or do you come with this psycho burnout and do the impossible against the unbelievable and keep the future at bay for another day?"
-msgstr ""
+msgstr "Fermez-vous les yeux sur ce que vous avez vu pour vous rendormir ? Ou accompagnez-vous ce psychopathe épuisé pour accomplir l'impossible face à l'incroyable et repousser l'avenir pour un jour de plus ?"
+
+#: src/components/Header/index.tsx:61
+msgid "First Night at the Opera?"
+msgstr "Première soirée à l'opéra ?"
 
 #: src/pages/Home/index.tsx:65
 msgid "Meet me at <0>The Crucible</0> and tell me a little bit about yourself, agent. What's your deal?"
