--- a/src/locales/fr/messages.po
+++ b/src/locales/fr/messages.po
@@ -13,17 +13,72 @@ msgstr ""
 "Language-Team: \n"
 "Plural-Forms: \n"
 
+#. placeholder {0}: t.name
+#. placeholder {0}: item.name
+#: src/components/Header/ThemeMenu.tsx:114
+#: src/components/Header/NavigationMenu.tsx:106
+msgid "{0}"
+msgstr "{0}"
+
+#: src/pages/About/index.tsx:145
+msgid "About the Author"
+msgstr "À propos de l'auteur"
+
+#: src/pages/About/index.tsx:140
+msgid "About the Game"
+msgstr "À propos du jeu"
+
+#: src/pages/About/index.tsx:75
+msgid "Andrew Sobiesiak is a Software Engineer that has played TTRPGs online weekly since 2017.<0/> He would make a terrible field agent but is prepared to fight the sisyphean cosmic war. He Lives in <1>Seattle, WA</1> with his <2>wife, 5 cats, and a dog</2>"
+msgstr "Andrew Sobiesiak est un ingénieur logiciel qui joue aux JDR sur table en ligne chaque semaine depuis 2017.<0/> Il ferait un terrible agent de terrain mais est prêt à combattre la guerre cosmique sisyphéenne. Il vit à <1>Seattle, WA</1> avec sa <2>femme, 5 chats et un chien</2>"
+
+#: src/pages/About/index.tsx:115
+msgid "Arc Dream Publishing is a small-press publisher that produces high-quality games, including roleplaying games, a horror gaming magazine, and card games. Some of their popular works include Delta Green, Swords & Sorceries, and The Black Company RPG."
+msgstr "Arc Dream Publishing est un petit éditeur qui produit des jeux de haute qualité, notamment des jeux de rôle, un magazine de jeux d'horreur et des jeux de cartes. Parmi leurs œuvres populaires figurent Delta Green, Swords & Sorceries et The Black Company RPG."
+
 #: src/pages/Home/index.tsx:58
-msgid "Do you close your eyes to what you’ve seen and go back to sleep? Or do you come with this psycho burnout and do the impossible against the unbelievable and keep the future at bay for another day?"
+msgid "Do you close your eyes to what you've seen and go back to sleep? Or do you come with this psycho burnout and do the impossible against the unbelievable and keep the future at bay for another day?"
 msgstr "Fermez-vous les yeux sur ce que vous avez vu pour vous rendormir ? Ou accompagnez-vous ce psychopathe épuisé pour accomplir l'impossible face à l'incroyable et repousser l'avenir pour un jour de plus ?"
 
 #: src/components/Header/index.tsx:61
 msgid "First Night at the Opera?"
 msgstr "Première soirée à l'opéra ?"
 
+#: src/components/Header/SettingsMenu.tsx:76
+msgid "Font Settings"
+msgstr "Paramètres de police"
+
+#: src/pages/About/index.tsx:101
+msgid "If the intelligence community was a family, Delta Green would be the uncle nobody talks about.<0/>Delta Green is a Table Top Role Playing Game that uses a D100 system. Handlers run operations for their agents, other players, where a grey government operation works to protect the world from unkown cosmic horrors."
+msgstr "Si la communauté du renseignement était une famille, Delta Green serait l'oncle dont personne ne parle.<0/>Delta Green est un Jeu de Rôle sur Table qui utilise un système D100. Les Gestionnaires dirigent des opérations pour leurs agents, d'autres joueurs, où une opération gouvernementale secrète œuvre pour protéger le monde des horreurs cosmiques inconnues."
+
+#: src/pages/About/index.tsx:87
+msgid "If you want to support this work, you can buy some Delta Green content through affiliate links."
+msgstr "Si vous souhaitez soutenir ce travail, vous pouvez acheter du contenu Delta Green via des liens d'affiliation."
+
 #: src/pages/Home/index.tsx:65
 msgid "Meet me at <0>The Crucible</0> and tell me a little bit about yourself, agent. What's your deal?"
 msgstr "Retrouvez-moi au <0>Creuset</0> et parlez-moi un peu de vous, agent. Quelle est votre histoire ?"
+
+#: src/components/Header/SettingsMenu.tsx:83
+msgid "Regional Settings"
+msgstr "Paramètres régionaux"
+
+#: src/components/Header/SettingsMenu.tsx:69
+msgid "Select Theme"
+msgstr "Sélectionner le thème"
+
+#: src/components/Header/NavigationMenu.tsx:95
+msgid "Start"
+msgstr "Commencer"
+
+#: src/pages/About/index.tsx:54
+msgid "Take a peek behind the curtain. Feel free to:<0><1>report an <2>issue </2></1><3>leave <4>feedback/feature requests</4></3><5>or ⭐️ Star the project to give the author ego a boost.</5></0>"
+msgstr "Jetez un coup d'œil derrière le rideau. N'hésitez pas à :<0><1>signaler un <2>problème</2></1><3>laisser des <4>commentaires/demandes de fonctionnalités</4></3><5>ou ⭐️ Étoiler le projet pour booster l'ego de l'auteur.</5></0>"
+
+#: src/pages/About/index.tsx:128
+msgid "Visit DriveThruRPG to purchase Delta Green source materials and learn more."
+msgstr "Visitez DriveThruRPG pour acheter les documents sources de Delta Green et en savoir plus."
 
 #: src/pages/Home/index.tsx:50
 msgid "We're fighting a war against the inevitable. And it's a war we're going to lose. But we're going to win the battles. We're going to make the bastards work for it. We're going to make them take ground inch by inch. And we're going to make them bleed for every inch they take."
