--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -16,15 +16,15 @@ msgstr ""
 #. placeholder {0}: t.name
 #. placeholder {0}: item.name
 #: src/components/Header/ThemeMenu.tsx:114
-#: src/components/Header/NavigationMenu.tsx:106
+#: src/components/Header/NavigationMenu.tsx:107
 msgid "{0}"
 msgstr "{0}"
 
-#: src/pages/About/index.tsx:145
+#: src/pages/About/index.tsx:139
 msgid "About the Author"
 msgstr "About the Author"
 
-#: src/pages/About/index.tsx:140
+#: src/pages/About/index.tsx:138
 msgid "About the Game"
 msgstr "About the Game"
 
@@ -36,9 +36,21 @@ msgstr "Andrew Sobiesiak is a Software Engineer that has played TTRPGs online we
 msgid "Arc Dream Publishing is a small-press publisher that produces high-quality games, including roleplaying games, a horror gaming magazine, and card games. Some of their popular works include Delta Green, Swords & Sorceries, and The Black Company RPG."
 msgstr "Arc Dream Publishing is a small-press publisher that produces high-quality games, including roleplaying games, a horror gaming magazine, and card games. Some of their popular works include Delta Green, Swords & Sorceries, and The Black Company RPG."
 
+#: src/pages/TheCrucible/Statistics/Statistics.tsx:82
+msgid "Base Statistics"
+msgstr "Base Statistics"
+
+#: src/pages/TheCrucible/index.tsx:45
+msgid "Bonds"
+msgstr "Bonds"
+
 #: src/pages/Home/index.tsx:58
 msgid "Do you close your eyes to what you’ve seen and go back to sleep? Or do you come with this psycho burnout and do the impossible against the unbelievable and keep the future at bay for another day?"
 msgstr "Do you close your eyes to what you’ve seen and go back to sleep? Or do you come with this psycho burnout and do the impossible against the unbelievable and keep the future at bay for another day?"
+
+#: src/pages/TheCrucible/index.tsx:47
+msgid "Dossier"
+msgstr "Dossier"
 
 #: src/components/Header/index.tsx:61
 msgid "First Night at the Opera?"
@@ -60,6 +72,14 @@ msgstr "If you want to support this work, you can buy some Delta Green content t
 msgid "Meet me at <0>The Crucible</0> and tell me a little bit about yourself, agent. What's your deal?"
 msgstr "Meet me at <0>The Crucible</0> and tell me a little bit about yourself, agent. What's your deal?"
 
+#: src/pages/TheCrucible/index.tsx:46
+msgid "Personal Details"
+msgstr "Personal Details"
+
+#: src/pages/TheCrucible/index.tsx:44
+msgid "Profession & Skills"
+msgstr "Profession & Skills"
+
 #: src/components/Header/SettingsMenu.tsx:83
 msgid "Regional Settings"
 msgstr "Regional Settings"
@@ -68,13 +88,25 @@ msgstr "Regional Settings"
 msgid "Select Theme"
 msgstr "Select Theme"
 
+#: src/components/Header/SettingsMenu.tsx:61
+msgid "Settings"
+msgstr "Settings"
+
 #: src/components/Header/NavigationMenu.tsx:95
 msgid "Start"
 msgstr "Start"
 
+#: src/pages/TheCrucible/index.tsx:43
+msgid "Statistics"
+msgstr "Statistics"
+
 #: src/pages/About/index.tsx:54
 msgid "Take a peek behind the curtain. Feel free to:<0><1>report an <2>issue </2></1><3>leave <4>feedback/feature requests</4></3><5>or ⭐️ Star the project to give the author ego a boost.</5></0>"
 msgstr "Take a peek behind the curtain. Feel free to:<0><1>report an <2>issue </2></1><3>leave <4>feedback/feature requests</4></3><5>or ⭐️ Star the project to give the author ego a boost.</5></0>"
+
+#: src/pages/TheCrucible/index.tsx:36
+msgid "The Crucible"
+msgstr "The Crucible"
 
 #: src/pages/About/index.tsx:128
 msgid "Visit DriveThruRPG to purchase Delta Green source materials and learn more."
